--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,13 @@
     "illuminate/filesystem": "^10.0|^11.0|^12.0"
   },
   "require-dev": {
+    "driftingly/rector-laravel": "^1.2",
+    "friendsofphp/php-cs-fixer": "^3.64",
+    "larastan/larastan": "^2.11",
     "orchestra/testbench": "^8.0|^9.0",
-    "phpunit/phpunit": "^10.0",
     "phpstan/phpstan": "^1.11",
-    "rector/rector": "^1.2",
-    "friendsofphp/php-cs-fixer": "^3.64"
+    "phpunit/phpunit": "^10.0",
+    "rector/rector": "^1.2"
   },
   "autoload": {
     "psr-4": {
